Menu z-index fix

--- a/stylesheets/menu-styles.css
+++ b/stylesheets/menu-styles.css
@@ -14,6 +14,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  z-index: 10;
 }
 #cssmenu:after,
 #cssmenu > ul:after {
